Fix overflow on skin description

--- a/src/components/SkinInfo/SkinInfo.module.scss
+++ b/src/components/SkinInfo/SkinInfo.module.scss
@@ -51,6 +51,7 @@
     overflow: auto;
 
     .description {
+      height: 100%;
     }
   }
   .iconContainer {
